kubernetes/argocd/apps/workloads/booklore/manifests/public-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booklore-public
  namespace: booklore
  labels:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: "books.paulynomial.com"
      http:
        paths:
          - backend:
              service:
                name: booklore
                port:
                  number: 6060
            path: /
            pathType: Prefix
